# EyeTrackVRPico

./: README.md
PicoSDK_Native-2.0.1_B11-20220608/Samples/CubeXR/: .gitignore  CMakeLists.txt  build.gradle  settings.gradle
PicoSDK_Native-2.0.1_B11-20220608/Samples/CubeXR/cube_xr/: AndroidManifest.xml  geometry.h  graphicsplugin.h  graphicsplugin_opengles.cpp  logger.cpp  main.cpp
PicoSDK_Native-2.0.1_B11-20220608/Samples/CubeXR/cube_xr/java/com/pico/cube_xr/: MainActivity.java
PicoSDK_Native-2.0.1_B11-20220608/Samples/CubeXR/lib/include/pxr/: PxrApi.h  PxrInput.h  PxrTypes.h
src/: settings.gradle
src/app/: build.gradle
src/app/src/androidTest/java/com/prometheontechnologies/eyetrackvrpico/: ExampleInstrumentedTest.java
src/app/src/main/: AndroidManifest.xml
src/app/src/main/res/values/: strings.xml  themes.xml
src/app/src/main/res/values-night/: themes.xml
src/app/src/test/java/com/prometheontechnologies/eyetrackvrpico/: ExampleUnitTest.java
src/cube_xr/: common.h  logger.cpp  main.cpp
src/gradle/wrapper/: gradle-wrapper.properties
